2002-09-17  Matt Brubeck <mbrubeck@cs.hmc.edu>
	
	* gedit-document.c (gedit_document_save_as_real): Use umask(2) 
	to calculate permissions for new files (fixes bug #93303)

2002-09-16  James Willcox  <jwillcox@gnome.org>

	Converted to recent-files stuff from libegg

	* Makefile.am:
	* dialogs/gedit-dialog-uri.c:
	* gedit-file.c: (gedit_file_open_real), (gedit_file_save),
	(gedit_file_save_as_real), (gedit_file_open_recent):
	* gedit-file.h:
	* gedit-mdi.c: (gedit_mdi_app_created_handler),
	(gedit_mdi_get_recent_view_from_window):
	* gedit-mdi.h:
	* gedit-recent.c: (gedit_recent_init):
	* gedit-recent.h:
	* recent-files/*.[ch]:  New stuff, recent-files code from libegg

2002-09-13  Paolo Maggi  <maggi@athena.polito.it>

	* gedit-ui.xml: show the Tools menu

2002-09-13  Paolo Maggi  <maggi@athena.polito.it>

	* gedit-document.c (gedit_document_set_last_replace_text)
	(gedit_document_set_last_searched_text): new functions

2002-09-09  Paolo Maggi  <maggi@athena.polito.it>

	* dialogs/gedit-preferences-dialog.c (add_enc_to_list)(update_encodings_list)
	(gedit_preferences_dialog_remove_enc_button_clicked)
	(gedit_preferences_dialog_encodings_treeview_selection_changed): new functions

2002-09-07  Paolo Maggi  <maggi@athena.polito.it>

	* gedit-commands.c (gedit_cmd_edit_select_all): use gedit_document_set_selection
	instead of gedit_view_select_all

	* gedit-document.[ch] (gedit_document_get_buffer)(gedit_document_delete_all_text)
	(gedit_document_get_selected_text)(gedit_document_has_selected_text): removed
	(gedit_document_set_selection)(gedit_document_get_selection): new functions
	
	* gedit-mdi.c (gedit_mdi_init): set the correct child list path

	* gedit-prefs-manager.c: Courier->Monospace, Helvetica->Sans Normal
	(fix bug #88076)
	(gedit_prefs_manager_get_default_print_font_*): new functions
	
	* dialogs/gedit-preferences-dialog.c: ditto

	* gedit-print.c: use the new gedit-document API

	* dialogs/gedit-dialog-replace.c: ditto
