@@ -43,6 +43,7 @@ EggRecentItem * egg_recent_item_new_from_uri (const gchar *uri);
 void egg_recent_item_set_uri (EggRecentItem *item, const gchar *uri);
 gchar * egg_recent_item_get_uri (const EggRecentItem *item);
 gchar * egg_recent_item_get_uri_utf8 (const EggRecentItem *item);
+gchar * egg_recent_item_get_uri_for_display (const EggRecentItem *item);
 
 void egg_recent_item_set_mime_type (EggRecentItem *item, const gchar *mime);
 gchar * egg_recent_item_get_mime_type (const EggRecentItem *item);
