@@ -1,3 +1,8 @@
+2002-09-17  James Willcox  <jwillcox@gnome.org>
+
+	* Sync up recent-files stuff.  Hopefully this fixes issues with
+	non-UTF-8 filenames.
+
 2002-09-17  Matt Brubeck <mbrubeck@cs.hmc.edu>
 	
 	* gedit-document.c (gedit_document_save_as_real): Use umask(2) 
